--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -1,4 +1,4 @@
-<div class="page page-core page-login">
+<div class="page page-core page-login" >
 	<div class="text-center logo-login"></div>
 	<div class="container w-360 p-15 bg-white mt-20 text-center login-box-shadow">
 		
@@ -6,7 +6,7 @@
 		
 		<form name="form" class="form-validation mt-20" novalidate ng-controller="LoginCtrl">
 			<div class="form-group">
-				<input type="email" class="form-control underline-input" placeholder="Email" ng-model="user.email" required>
+				<input type="email" class="form-control underline-input" placeholder="Email" ng-model="user.username" required>
 			</div>
 
 			<div class="form-group">
@@ -20,7 +20,7 @@
 					<input type="checkbox"><i></i> Remember me
 				</label>
 				<a ui-sref="core.forgot-password" class="pull-right mt-10">Forgot Password?</a><br/>
-				<button type="submit" class="btn btn-greensea b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Sign In</button>
+				<button type="submit" class="btn btn-greensea b-0 br-2 mt-10 m-0-auto" ng-click="loginFunction()" >Sign In</button>
 			</div>
 		</form>
 		
