Added token to facility

--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -164,8 +164,8 @@
 									</label>
 								</div>
 								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default" type="button">Search</button>
+									<input type="text" class="form-control" placeholder="Search by text...." ng-model="facility.search_val">
+									<button class="btn btn-default" type="button" ng-click=search(facility)>Search</button>
 								</div>
 								<div class="col-md-4">
 									<div class="gridlistbar ta-r pull-right">
