--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -84,14 +84,16 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form name="form1" role="form" ng-submit="save(facility)">
+										<form name="facilityform" role="form" ng-submit="save(facility)" >
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Facility</h4></div>
+											<div ng-repeat="master in masters">{{master}}</div>
 											<div class="modal-body">
 												<div class="row overflow">
 													<div class="col-md-6">
-														<div class="form-group">
+														<div class="form-group" ng-class="{ 'has-error' : facilityform.$dirty && facilityform.facility_name.$error.required}">
 															<label for="">Facility Name</label>
-															<input type="text" name="" id="" class="form-control mb-10" placeholder="" ng-model="facility.facility_name">
+															<input type="text" name="facility_name" id="" class="form-control mb-10" placeholder="" ng-model="facility.facility_name" required >
+															<span ng-show="facilityform.$dirty && facilityform.facility_name.$error.required">This field is required.</span>
 														</div>
 													</div>
 													<div class="col-md-6">
@@ -104,23 +106,26 @@
 														</div>
 													</div>
 												</div>
-												<div class="form-group">
+												<div class="form-group" ng-class="{ 'has-error' : facilityform.$dirty && facilityform.facility_location.$error.required}">
 													<label for="">Facility Location</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+													<input type="text" name="facility_location" id="" class="form-control mb-10" placeholder="" ng-model="facility.facility_location" required>
+													<span ng-show="facilityform.$dirty && facilityform.facility_location.$error.required">This field is required.</span>
 												</div>
 												<div class="row">
 													<div class="col-md-6">
-														<div class="form-group">
+														<div class="form-group" ng-class="{ 'has-error' : facilityform.$dirty && facilityform.timeZone.$error.required}">
 															<label for="">Time Zone</label>
-															<select class="form-control mb-10" ng-model="facility.timezones.model">
+															<select name="timeZone" class="form-control mb-10" ng-model="facility.timeZone" required>
 																<option ng-repeat="option in timezones.availableOptions" value="{{option.id}}">{{option.name}}</option>
 															</select>
+															<span ng-show="facilityform.$dirty && facilityform.timeZone.$error.required">This field is required.</span>
 														</div>
 													</div>
 													<div class="col-md-6">
-														<div class="form-group">
+														<div class="form-group" ng-class="{ 'has-error' : facilityform.$dirty && facilityform.zip_code.$error.required}">
 															<label for="">Zip Code</label>
-															<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+															<input type="text" name="zip_code" id="" class="form-control mb-10" placeholder="" ng-model="facility.zip_code" required>
+															<span ng-show="facilityform.$dirty && facilityform.zip_code.$error.required">This field is required.</span>
 														</div>
 													</div>
 												</div>
@@ -128,17 +133,17 @@
 													<div class="col-md-6">
 														<div class="form-group">
 															<label for="">Status</label><br/>
-															<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+															<div class="btn-group btnrounded" >
+																<label class="btn btn-default" name="status" ng-model="facility.status" uib-btn-radio="'Active'" value=1>Active</label>
+																<label class="btn btn-default" ng-model="facility.status" name="status" uib-btn-radio="'Inactive'" value=0>Inactive</label>
 															</div>
 														</div>
 													</div>
 												</div>											
 											</div>
 											<div class="modal-footer">
-												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
-												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()" onclick="return false;"><i class="fa fa-arrow-left"></i> Close</button>
+												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c" ng-disabled="facilityform.$invalid"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
 									</script>
