--- a/views/tmpl/admin/device/device-details.html
+++ b/views/tmpl/admin/device/device-details.html
@@ -82,20 +82,20 @@
 						<div class="thumb thumb-xxll mb-20">
 							<img class="img-circle" src="images/device/1.jpg" alt="">
 						</div>
-						<h3 class="mb-10"><strong>Reception Room</strong></h3>
-						<span class="text-muted">Elika-460</span>
-						<span class="text-muted">Wifi &nbsp;|&nbsp; RFID &nbsp;|&nbsp; BLE &nbsp;|&nbsp; Camera</span>
+						<h3 class="mb-10"><strong>{{details.device_name}}</strong></h3>
+						<span class="text-muted">{{details.device_model}} </span>
+						<span class="text-muted"><span ng-repeat="(key,features) in details.features">{{key|uppercase}}<span ng-if="!$last">&nbsp;|</span> </span></span>
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
-								<h2 class="m-0">3</h2>
+								<h2 class="m-0">{{details.device_slave_count}}</h2>
 								<span class="text-transparent-white">Dependent Devices</span>
 							</li>
-							<li class="tcol bg-blue dker p-10">
+							<!--<li class="tcol bg-blue dker p-10">
 								<h2 class="m-0">3</h2>
 								<span class="text-transparent-white">Users</span>
-							</li>
+							</li>-->
 						</ul>
 					</div>  
 				</section> 
@@ -126,14 +126,16 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Facility Name</label> USA Corporate Services</p>
-												<p><label>Device Name</label> Reception Room</p>
-												<p><label>Model Name</label> Elika-Doorbell</p>
-												<p><label>Serial No.</label> 11092015Elika460RR</p>
-												<p><label>Device Type</label> Primary Device</p>
-												<p><label>Technician</label> Peter</p>
-												<p><label>Door</label> Main Gate Front</p>
-												<p><label>Features</label> Wifi &nbsp;|&nbsp; RFID &nbsp;|&nbsp; BLE &nbsp;|&nbsp; Camera</p>												
+												<p><label>Facility Name</label> {{details.facility_name}}</p>
+												<p><label>Device Name</label> {{details.device_name}}</p>
+												<p><label>Model Name</label> {{details.device_model}}</p>
+												<p><label>Serial No.</label> {{details.device_serial_no}}</p>
+												<p><label>Device Type</label> {{details.device_type}}</p>
+												<p><label>Technician</label> {{details.technician_name}}</p>
+												<!--<p><label>Door</label> {{details.device_name}}</p>-->
+												
+												<p><label>Features</label> <span ng-repeat="(key,features) in details.features">{{key|uppercase}}<span ng-if="!$last">&nbsp;|</span> </span></p>
+												<!--<p><label>Features</label> Wifi &nbsp;|&nbsp; RFID &nbsp;|&nbsp; BLE &nbsp;|&nbsp; Camera</p>-->												
 											</div>											
 										</div>
 										
@@ -154,26 +156,11 @@
 															</tr>
 														</thead>
 														<tbody>
-															<tr>
-																<td>Wifi</td>
-																<td class="online"><i class="fa fa-circle"></i> Online</td>
+															<tr ng-repeat="(key,features) in details.features">
+																<td>{{key | uppercase}}</td>
+																<td class="{{features|deviceFeatureFilter}}"><i class="fa fa-circle"></i> {{features|deviceFeatureFilter | capitalize}}</td>
 															</tr>
-															<tr>
-																<td>Device Module</td>
-																<td class="offline"><i class="fa fa-circle"></i> Offline</td>
-															</tr>
-															<tr>
-																<td>BLE</td>
-																<td class="online"><i class="fa fa-circle"></i> Online</td>
-															</tr>
-															<tr>
-																<td>RFID</td>
-																<td class="online"><i class="fa fa-circle"></i> Online</td>
-															</tr>
-															<tr>
-																<td>Camera</td>
-																<td class="online"><i class="fa fa-circle"></i> Online</td>
-															</tr>
+															
 														</tbody>
 													</table>
 												</div>
@@ -251,7 +238,7 @@
 																				</div>
 																			</div>
 																		</div>
-																		<div class="form-group" ng-controller="PrimarybtnCtrl">
+																		<div class="form-group">
 																			<label for="">Device Type</label><br/>
 																			<div class="btn-group btnrounded">
 																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Primary'">Primary</label>
@@ -332,12 +319,12 @@
 										<div ng-class="class">
 											<div class="glview">
 												<md-content>			
-													<md-card class="slaveusers" ng-repeat="device in devices | limitTo:totalDisplayed | filter:text | filter:title | filter:model | orderBy:myOrderBy">
+													<md-card class="slaveusers" ng-repeat="device in dependent_devices | filter:text | filter:title | filter:model | orderBy:myOrderBy">
 														<a ui-sref="app.admin.device.dependent-devices-details"><img ng-src="{{imagePath}}/device/{{ device.imagename }}.jpg" class="md-card-image" alt="Washed Out"></a>
 														<md-card-content>
-															<h2 class="md-title">{{ device.title }}</h2>
-															<p>{{ device.model }}</p>
-															<p>{{ device.noofuser }} Users</p>
+															<h2 class="md-title">{{ device.device_name }}</h2>
+															<p>{{ device.device_model }}</p>
+															<!--<p>{{ device.noofuser }} Users</p>-->
 														</md-card-content>
 														<div class="md-actions" layout="row" layout-align="center center">
 															<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.dependent-devices-details">View</a>
@@ -752,21 +739,21 @@
 											<div class="row">
 												<div class="form-group col-sm-6">
 													<label for="">Device Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" value="Reception Room">
+													<input type="text" name="" id="" class="form-control mb-10" ng-model="editDevice.device_name">
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Model Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" value="Elika-Doorbell" disabled>
+													<input type="text" name="" id="" class="form-control mb-10" ng-model="editDevice.model_name" disabled>
 												</div>
 											</div>
 											<div class="row">
 												<div class="form-group col-sm-6">
 													<label for="">Serial Number</label>
-													<input type="text" name="" id="" class="form-control mb-10" value="11092015Elika460RR" disabled>
+													<input type="text" name="" id="" class="form-control mb-10" ng-model="editDevice.device_serial_no" disabled>
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Technician</label><br/>
-													<select class="form-control">
+													<select class="form-control" ng-model="editDevice.device_technician_id">
 														<option>Arnold</option>
 														<option selected>Peter</option>
 														<option>Paracosm</option>
@@ -779,13 +766,13 @@
 												</div>
 											</div>
 											<div class="row">
-												<div class="form-group col-sm-6" ng-controller="PrimarybtnCtrl">
+												<div class="form-group col-sm-6">
 													<label for="">Device Type</label><br/>
 													<div class="btn-group btnrounded">
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Primary'">Primary</label>
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Dependent'">Dependent</label>
+														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'master'">Primary</label>
+														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'slave'">Dependent</label>
 													</div>
-													<div class="slavevalues" ng-hide="radioModel=='Primary'">
+													<div class="slavevalues" ng-hide="radioModel=='master'">
 														<select class="form-control mb-10">
 															<option>Select Primary Device</option>
 															<option>Reception Room</option>
