Added device count and user counnt

--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -207,7 +207,7 @@
 											<md-card-content>
 												<h2 class="md-title">{{ facility.title }}</h2>
 												<p>{{ facility.location }}</p>
-												<p>{{ facility.noofdevices }} Devices &nbsp;|&nbsp; {{ facility.noofuser }} Users</p>
+												<p>{{ facility.facility_device_count }} Devices &nbsp;|&nbsp; {{ facility.facility_user_count }} Users</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.dashboard">View</a>
