--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -100,7 +100,7 @@
 														<div class="form-group">
 															<label for="">Profile Photo</label>
 															<div class="profilephoto">
-																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1" file-model="facility.profile_pic">
 																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 															</div>
 														</div>
@@ -170,7 +170,7 @@
 								</div>
 								<div class="col-md-4 search">
 									<input type="text" class="form-control" placeholder="Search by text...." ng-model="facility.search_val">
-									<button class="btn btn-default" type="button" ng-click=search(facility)>Search</button>
+									<button class="btn btn-default" type="button" ng-click="search_facility(facility)">Search</button>
 								</div>
 								<div class="col-md-4">
 									<div class="gridlistbar ta-r pull-right">
@@ -210,8 +210,9 @@
 												<p>{{ facility.facility_device_count }} Devices &nbsp;|&nbsp; {{ facility.facility_user_count }} Users</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.dashboard">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details">Edit</a>
+												<!-- <a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.dashboard">View</a> -->
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details({facility_id:  {{facility.facility_id }}})">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details({facility_id:  {{facility.facility_id }}})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
 											</div>
 										</md-card>										
