--- a/views/tmpl/admin/device/dependent-devices-details.html
+++ b/views/tmpl/admin/device/dependent-devices-details.html
@@ -82,9 +82,9 @@
 						<div class="thumb thumb-xxll mb-20">
 							<img class="img-circle" src="images/device/3.jpg" alt="">
 						</div>
-						<h3 class="mb-10"><strong>Reception 460S</strong></h3>
-						<span class="text-muted">Elika-460(s)</span>
-						<span class="text-muted">RFID &nbsp;|&nbsp; BLE</span>
+						<h3 class="mb-10"><strong>{{details.device_name}}</strong></h3>
+						<span class="text-muted">{{details.device_model}} </span>
+						<span class="text-muted"><span ng-repeat="(key,features) in details.features">{{key|uppercase}}<span ng-if="!$last">&nbsp;|</span> </span></span>
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
@@ -121,14 +121,14 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Facility Name</label> USA Corporate Services</p>
-												<p><label>Device Name</label> Reception 460S</p>
-												<p><label>Model Name</label> Elika-460(s)</p>
-												<p><label>Serial No.</label> eliak46010192016s</p>
-												<p><label>Device Type</label> Dependent Device</p>
-												<p><label>Technician</label> Peter</p>
-												<p><label>Door</label> Main Gate Front</p>
-												<p><label>Features</label> RFID &nbsp;|&nbsp; BLE</p>
+												<p><label>Facility Name</label> {{details.facility_name}}</p>
+												<p><label>Device Name</label> {{details.device_name}}</p>
+												<p><label>Model Name</label> {{details.device_model}}</p>
+												<p><label>Serial No.</label> {{details.device_serial_no}}</p>
+												<p><label>Device Type</label> {{details.device_type}}</p>
+												<p><label>Technician</label> {{details.technician_name}}</p>
+												<!-- <p><label>Door</label> Main Gate Front</p> -->
+												<p><label>Features</label> <span ng-repeat="(key,features) in details.features">{{key|uppercase}}<span ng-if="!$last">&nbsp;|</span> </span></p>
 											</div>											
 										</div>
 										
@@ -149,26 +149,11 @@
 															</tr>
 														</thead>
 														<tbody>
-															<tr>
-																<td>Wifi</td>
-																<td class="offline"><i class="fa fa-circle"></i> Offline</td>
+															<tr ng-repeat="(key,features) in details.features">
+																<td>{{key | uppercase}}</td>
+																<td class="{{features|deviceFeatureFilter}}"><i class="fa fa-circle"></i> {{features|deviceFeatureFilter | capitalize}}</td>
 															</tr>
-															<tr>
-																<td>Device Module</td>
-																<td class="offline"><i class="fa fa-circle"></i> Offline</td>
-															</tr>
-															<tr>
-																<td>BLE</td>
-																<td class="online"><i class="fa fa-circle"></i> Online</td>
-															</tr>
-															<tr>
-																<td>RFID</td>
-																<td class="online"><i class="fa fa-circle"></i> Online</td>
-															</tr>
-															<tr>
-																<td>Camera</td>
-																<td class="offline"><i class="fa fa-circle"></i> Offline</td>
-															</tr>
+															
 														</tbody>
 													</table>
 												</div>
@@ -574,61 +559,55 @@
 							</uib-tab>
 							<uib-tab heading="Edit Device">
 								<div class="wrap-reset"> 
-									<form name="form1" role="form">
+									<form name="form1" role="form" ng-submit="editFormSubmit(editDevice)">
 										<div class="modal-body">											
 											<div class="row">
 												<div class="form-group col-sm-6">
 													<label for="">Device Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" value="Reception 460S">
+													<input type="text" name="" id="" class="form-control mb-10" ng-model="editDevice.device_name">
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Model Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" value="Elika-460(s)" disabled>
-													
+													<input type="text" name="" id="" class="form-control mb-10" ng-model="editDevice.device_model" disabled>
 												</div>
 											</div>
 											<div class="row">
 												<div class="form-group col-sm-6">
 													<label for="">Serial Number</label>
-													<input type="text" name="" id="" class="form-control mb-10" value="eliak46010192016s" disabled>
+													<input type="text" name="" id="" class="form-control mb-10" ng-model="editDevice.device_serial_no" disabled>
 												</div>
 												<div class="form-group col-sm-6">
-													<label for="">Technician</label><br/>
-													<select class="form-control">
-														<option>Arnold</option>
-														<option selected>Peter</option>
-														<option>Paracosm</option>
-														<option>Jason</option>
-														<option>Paul</option>
-														<option>Vin</option>
-														<option>Dwayne</option>
+													<label for="">Technician </label><br/>
+													<select class="form-control" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.id"  ng-model="editDevice.device_technician_id">
+														<option value="">Select</option>
+														
 													</select>
-													<small class="pull-right" style="margin-bottom:-5px;"><a ui-sref="app.admin.support.technician">Add Technician</a></small>
+													<!--<small class="pull-right" style="margin-bottom:-5px;"><a ui-sref="app.admin.support.technician">Add Technician</a></small>-->
 												</div>
-											</div>											
+											</div>
 											<div class="row">
-												<div class="form-group col-sm-6" ng-controller="DependentbtnCtrl">
+												<div class="form-group col-sm-6">
 													<label for="">Device Type</label><br/>
-													<div class="btn-group btnrounded" >
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Primary'">Primary</label>
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Dependent'">Dependent</label>
+													<div class="btn-group btnrounded">
+														<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'master'">Primary</label>
+														<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'">Dependent</label>
 													</div>
-													<div class="slavevalues" ng-hide="radioModel=='Primary'">
+													<div class="slavevalues" ng-hide="editDevice.device_type=='master'">
 														<select class="form-control mb-10">
 															<option>Select Primary Device</option>
-															<option selected>Reception Room</option>
-															<option>Conference Room</option>
-															<option>Server Room</option>
-															<option>Meeting Room</option>
-															<option>Development Room</option>
-															<option>Boardroom</option>
-															<option>Managers Room</option>
-															<option>Director Room</option>
-															<option>Inventory Room</option>
+															<option value=1>Reception Room</option>
+															<option value=2>Conference Room</option>
+															<option value=3>Server Room</option>
+															<option value=4>Meeting Room</option>
+															<option value=5>Development Room</option>
+															<option value=6>Boardroom</option>
+															<option value=7>Managers Room</option>
+															<option value=8>Director Room</option>
+															<option value=9>Inventory Room</option>
 														</select>
 													</div>
 												</div>
-												<div class="form-group col-sm-6">
+												<!--div class="form-group col-sm-6">
 													<label for="">Doors</label><br/>
 													<select multiple chosen="{width: '100%'}">
 														<option selected>Main Gate Front</option>
@@ -641,14 +620,14 @@
 														<option>Gym Gate</option>
 													</select>
 													<small class="pull-right"><a ui-sref="app.admin.door.doors">Add Door</a></small>
-												</div>
-											</div>											
+												</div-->
+											</div>		
 										</div>
 										<div class="row">
 											<div class="form-group col-md-12 legend mt-20">
 												<p></p>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
+												<button type="button" onclick="window.history.back()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
+												<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
 											</div>
 										</div>
 									</form>
