--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -235,17 +235,17 @@
 							<div ng-class="class">
 								<div class="glview">
 									<md-content>			
-										<md-card ng-repeat="device in devices | limitTo:totalDisplayed | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
+										<md-card ng-repeat="device in dependentDevice | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
 											<a ui-sref="app.admin.device.device-details"><img ng-src="{{imagePath}}/device/{{ device.imagename }}.jpg" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
-												<h2 class="md-title">{{ device.title }}</h2>
-												<p>{{ device.model }}</p>
-												<p>{{ device.noofuser }}</p>
+												<h2 class="md-title">{{ device.device_name }}</h2>
+												<p>{{ device.device_model }}</p>
+												<p>Dependent {{ device.device_slave_count }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.dependent-devices-details">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.dependent-devices-details">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.dependent-devices-details({device_id:device.device_id})">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.dependent-devices-details({device_id:device.device_id})">Edit</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id,$event)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
