--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -169,7 +169,7 @@
 									</label>
 								</div>
 								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text...." ng-model="facility.search_val">
+									<input type="text" class="form-control" placeholder="Search by text...." ng-model="facility.search_val" ng-keypress="search_facility(facility)">
 									<button class="btn btn-default" type="button" ng-click="search_facility(facility)">Search</button>
 								</div>
 								<div class="col-md-4">
